@@ -26,6 +26,7 @@
    * Allow marauders to become friendly
    * Fixed gamma correction / colourblind shaders not being run on top of everything
    * Fixed damage sometimes causing pilots to instantly become undisabled
+   * Fixed Sirius ships acquired before 0.11.0 not being able to use flow
    * `srs_ferry`: fixed marker not updating for alternative delivery locations
    * `nelly01`: fixed giving the player twice as much money as needed for an ion cannon
    * `nelly03`: guard against the player changing systems in the middle of mining
